@@ -4,7 +4,7 @@ catalog: hw/network/enterasys
 license: GPL
 distribution: check_mk
 description:
- This check shows the current cpu utilization of a casa module
+ This check shows the current average cpu utilization of all plugged-in CPU modules.
 
 
 inventory:
