@@ -121,6 +121,8 @@
     * 0595 dell_chassis_power, dell_chassis_powersupplies: new checks for Dell Poweredge Chassis Ppower consumption...
     * 0596 dell_chassis_status, dell_chassis_temp, dell_chassis_kvm, dell_chassis_io, dell_chassis_fans: new checks to monitor the overall status of various sections of the Dell Poweredge Chassis via CMC
     * 0597 dell_chassis_slots: new check to monitor the status of the blade slots of the Dell Poweredge Blade Servers
+    * 0145 apc_symmetra: Changed naming of Batterie Temperature to System Temerature...
+            NOTE: Please refer to the migration notes!
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
